Harden widget and preset server address